# addmeta

./: .travis.yml  README.md  addmeta.py  pytest.ini  requirements.txt  setup.cfg
addmeta/: __init__.py  addmeta.py  cli.py
conda/: meta.yaml
metadata/ARCCSS/: base.yaml
metadata/WRF/: model.yaml  schemes.yaml  v3.3.yaml
test/: meta1.yaml  meta12.yaml  meta2.yaml  meta_del.yaml  meta_var1.yaml  metalist  test.cdl  test_read_yaml.py
