[metadata]
name = addmeta
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    addmeta

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True

[entry_points]
console_scripts =
    addmeta=addmeta.cli:main_argv

[extras]
dev = 
    pytest
    pyyaml

[tools.pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py
